# FilesToGPTDesktop

./: .gitignore  CMakeLists.txt  README.md  fileitemwidget.cpp  fileitemwidget.h  mainwindow.cpp  mainwindow.h  token_counter.py
